--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <h3><i class="fas fa-graduation-cap"></i> Educación</h3>
                 <ul>
-                    <li><strong>Ingeniería de Sistemas</strong> - Universidad de Ibagué (2014 - 2019)</li>
+                    <li><strong>Ingeniería de Sistemas</strong> - Universidad Cooperativa de Colombia (2014 - 2019)</li>
                 </ul>
 
                 <!-- <h3><i class="fas fa-language"></i> Idiomas</h3>
